--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/EditAppStimmerDescriptionPopupPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/EditAppStimmerDescriptionPopupPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:PopupPage
+<ContentPage
     x:Class="MSO.StimmApp.Views.Pages.EditAppStimmerDescriptionPopupPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
-    HasSystemPadding="True">
+    Title="Beschreibung editieren">
     <Grid>
         <ScrollView Margin="0,57,0,0" BackgroundColor="White">
             <Grid>
@@ -16,7 +16,7 @@
                 </Grid.RowDefinitions>
 
                 <StackLayout Grid.Column="0" Orientation="Vertical">
-                    <elements:ExpandableEditor Text="{Binding Text}" />
+                    <elements:ExpandableEditor Margin="10" Text="{Binding Text}" />
                 </StackLayout>
             </Grid>
         </ScrollView>
@@ -43,29 +43,5 @@
                 Command="{Binding SaveDescriptionCommand}"
                 Text="Ok" />
         </Grid>
-
-        <StackLayout
-            BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.PrimaryColor}"
-            HeightRequest="57"
-            HorizontalOptions="FillAndExpand"
-            Orientation="Horizontal"
-            Spacing="0"
-            VerticalOptions="Start">
-            <Image
-                Margin="15"
-                HorizontalOptions="Start"
-                Source="{stimmApp:ImageResource MSO.StimmApp.Resources.Icons.arrow-left.scale-100.png}"
-                VerticalOptions="Start">
-                <Image.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="BackButtonImage_OnTapped" />
-                </Image.GestureRecognizers>
-            </Image>
-
-            <Label
-                Margin="0,14,0,0"
-                FontSize="20"
-                Text="Beschreibung editieren"
-                TextColor="White" />
-        </StackLayout>
     </Grid>
-</pages:PopupPage>
+</ContentPage>
