--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/PictureAttachmentPreviewPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/PictureAttachmentPreviewPage.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<pages:PopupPage
+<ContentPage
     x:Class="MSO.StimmApp.Views.Pages.PictureAttachmentPreviewPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
     xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
-    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView">
+    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
+    NavigationPage.HasNavigationBar="False">
     <Grid x:Name="MainGrid" RowSpacing="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -46,4 +47,4 @@
             </elements:SubmitButton.GestureRecognizers>
         </elements:SubmitButton>
     </Grid>
-</pages:PopupPage>
+</ContentPage>
