--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
@@ -43,6 +43,7 @@
                     FontSize="15"
                     HeightRequest="60"
                     HorizontalTextAlignment="Center"
+                    IsVisible="{Binding Description, Converter={StaticResource StringToVisibilityConverter}}"
                     Text="{Binding Description}"
                     TextColor="White"
                     VerticalTextAlignment="Center" />
