--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmerPage.xaml
@@ -24,8 +24,11 @@
                 <RowDefinition Height="20*" />
             </Grid.RowDefinitions>
 
-            <appstimmen:AppStimmerButtonsView Grid.Row="1" />
-            <appstimmen:AppStimmerCardView Grid.Row="0" Margin="8,8,8,0" />
+            <appstimmen:AppStimmerButtonsView x:Name="ButtonsView" Grid.Row="1" />
+            <appstimmen:AppStimmerCardView
+                x:Name="AppStimmerView"
+                Grid.Row="0"
+                Margin="8,8,8,0" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
