--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowImageAttachmentPage.xaml
@@ -35,6 +35,7 @@
             <StackLayout
                 x:Name="BottomStackLayout"
                 Grid.Row="1"
+                BackgroundColor="Transparent"
                 Spacing="0"
                 VerticalOptions="EndAndExpand">
                 <Label
