--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AddAttachmentPopupPage.xaml
@@ -8,6 +8,8 @@
     xmlns:pages="clr-namespace:Rg.Plugins.Popup.Pages;assembly=Rg.Plugins.Popup"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
     xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
+    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+    xmlns:enums="clr-namespace:MSO.StimmApp.Core.Enums;assembly=MSO.StimmApp.Core"
     CloseWhenBackgroundIsClicked="False"
     HasSystemPadding="True">
     <Grid>
@@ -27,7 +29,62 @@
             <Frame.GestureRecognizers>
                 <TapGestureRecognizer Tapped="FrameGestureRecognizer_OnTapped" />
             </Frame.GestureRecognizers>
-            <attachments:AddAttachmentView />
+                    <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75" />
+                <RowDefinition Height="75" />
+                <RowDefinition Height="70" />
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddPictureButton"
+                Grid.Row="0"
+                Grid.Column="0"
+                AttachmentType="{x:Static enums:AttachmentType.Picture}"
+                Description="Bild"
+                IconSource="MSO.StimmApp.Resources.Icons.picture_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddGalleryPictureButton"
+                Grid.Row="0"
+                Grid.Column="1"
+                AttachmentType="{x:Static enums:AttachmentType.GalleryPicture}"
+                Description="Bild (Galerie)"
+                IconSource="MSO.StimmApp.Resources.Icons.camera_blue_circle.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddLocationButton"
+                Grid.Row="0"
+                Grid.Column="2"
+                AttachmentType="{x:Static enums:AttachmentType.Location}"
+                Description="Standort"
+                IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddVideoButton"
+                Grid.Row="1"
+                Grid.Column="0"
+                AttachmentType="{x:Static enums:AttachmentType.Video}"
+                Description="Video"
+                IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddGalleryVideoButton"
+                Grid.Row="1"
+                Grid.Column="1"
+                AttachmentType="{x:Static enums:AttachmentType.GalleryVideo}"
+                Description="Video (Galerie)"
+                IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddDocumentButton"
+                Grid.Row="1"
+                Grid.Column="2"
+                AttachmentType="{x:Static enums:AttachmentType.Document}"
+                Description="Dokument"
+                IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
+        </Grid>
         </Frame>
     </Grid>
 
