--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
@@ -23,16 +23,12 @@
 
                 <xForms:SfListView
                     x:Class="MSO.StimmApp.Views.ContentViews.AppStimmers.AppStimmersListView"
-                    xmlns="http://xamarin.com/schemas/2014/forms"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
-                    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
                     xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
-                    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
                     x:Name="ListView"
                     BackgroundColor="Transparent"
                     BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}"
                     ItemSize="250"
+                    ItemSpacing="0"
                     ItemTapped="AppStimmersListView_OnItemTapped"
                     ItemsSource="{Binding AppStimmers}"
                     SelectionBackgroundColor="Transparent">
