--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/MapsContentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/MapsContentPage.xaml
@@ -13,6 +13,7 @@
 
     <Grid>
         <Frame
+            x:Name="SearchBarFrame"
             Margin="15,15,15,0"
             Padding="0"
             BackgroundColor="White"
@@ -109,6 +110,7 @@
             SelectedPin="{Binding SelectedPin}"
             VerticalOptions="FillAndExpand" />
         <Grid
+            x:Name="DescriptionGrid"
             BackgroundColor="#99000000"
             HeightRequest="50"
             HorizontalOptions="FillAndExpand"
@@ -145,6 +147,7 @@
         </StackLayout>
 
         <elements:SubmitButton
+            x:Name="SubmitButton"
             Margin="0,0,30,10"
             HorizontalOptions="End"
             IsVisible="{Binding Attachment.IsNew}"
