--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/VideoAttachmentPreviewPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/VideoAttachmentPreviewPage.xaml
@@ -15,6 +15,7 @@
             Source="{}"
             VerticalOptions="FillAndExpand" />
         <Grid
+            x:Name="DescriptionGrid"
             BackgroundColor="#88000000"
             HeightRequest="50"
             HorizontalOptions="FillAndExpand"
@@ -30,6 +31,7 @@
         </Grid>
 
         <elements:SubmitButton
+            x:Name="SubmitButton"
             Margin="0,0,25,10"
             HorizontalOptions="End"
             VerticalOptions="End">
