Added butt0n animations

--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerButtonsView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/Appstimmen/AppStimmerButtonsView.xaml
@@ -40,7 +40,7 @@
                 VerticalOptions="Center"
                 WidthRequest="65">
                 <xfShapeView:ShapeView.GestureRecognizers>
-                    <TapGestureRecognizer Command="{Binding ShowDetailsCommand}" />
+                    <TapGestureRecognizer Command="{Binding ShowDetailsCommand}" Tapped="TapGestureRecognizer_OnTapped" />
                 </xfShapeView:ShapeView.GestureRecognizers>
                 <xfShapeView:ShapeView.Content>
                     <elements:TintedSvgCachedImage
